# uncertainty-decode

./: .gitignore  README.md  UncertaintyDecode_Colab.ipynb  pyproject.toml  run_all.sh
.github/workflows/: ci.yml
benchmarks/: bench_ablation.py  bench_latency.py  bench_roofline.py
docs/: paper_outline.md
evals/: eval_longbench.py  eval_truthfulqa.py
scripts/: profile_kernel.py  train_uncertainty_head.py
tests/: test_gpu_pipeline.py  test_integration.py
uncertainty_decode/: __init__.py
uncertainty_decode/eviction/: block_scorer.py  policy.py  uncertainty_head.py
uncertainty_decode/kernels/: dirichlet_kernel.py  gpu_profiler.py
uncertainty_decode/serving/: llm.py  scheduler_patch.py
